# Multi_Opt_sovler

Demo/auto_version/: ex_test_ipopt.cpp  test_vars_constr_cost.h
Demo/trivial_version/: ex_test_ipopt.cpp  test_vars_constr_cost.h
Test_1/: CMakeLists.txt  ex_test_ipopt.cpp  test_vars_constr_cost.h
Test_2/: ex_test_ipopt.cpp  test_vars_constr_cost.h
trivial_version/: ex_test_ipopt.cpp  test_vars_constr_cost.h
